# Driver_Radar

./: README.md
docs/superpowers/plans/: 2026-06-02-ros2-jazzy-phase1.md  2026-06-03-readme-guide.md
docs/superpowers/specs/: 2026-06-02-ros2-jazzy-phase1-design.md
radar_driver/: CMakeLists.txt  package.xml
radar_driver/include/: parser.h  processPacket.h  radarPublisher.h
radar_driver/launch/: single_radar.launch.py
radar_driver/msg/: EthCfg.msg  RadarDetection.msg  RadarPacket.msg  SensorCfg.msg  SensorStatus.msg
radar_driver/rviz/: single_radar_ros2.rviz
radar_driver/scripts/: EthCfgRx.py  SensorCfgRx.py  plot.py  publishTest.py  testPlot.py
radar_driver/src/: FilteredMain.cpp  PointCloudConverter.cpp  UnfilteredMain.cpp  cluster.cpp  parser.cpp  processPacket.cpp  radarPublisher.cpp  radar_clustering.cpp  sniffer.cpp
radar_driver/tests/: test_critical_regressions.py
