<?xml version="1.0"?>
<package format="3">
  <name>radar_driver</name>
  <version>0.0.1</version>
  <description>The ROS 2 publisher package for the ARS430 Continental Radars</description>
  <maintainer email="watouser@todo.todo">watouser</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcap</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
